@@ -2,6 +2,8 @@
 
         * Released 2.0.45-stable.
 
+        * Fixed a potential problem with DiffLinkTag and special pages.
+
 2003-05-29  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>
 
         * v2.0.44.
